vector06c/basic/2.997/README.md
---
name: BASIC 2.997 для Вектора-06Ц
date: 2025
tags:
  - basic-dev
  - development
authors:
  - schetmash
  - ivagor
  - sokolov
  - temirazov
---

Исправлены ошибки/недоработки, присутствовавшие практически во всех клонах Бейсика 2.5:
2.55:

1. Данная версия совместима с процессорами 580ВМ80, 580ВМ1, z80 и 1821ВМ85. Причем в отличие от других версий здесь есть полная совместимость и по константам чтения/записи на магнитофон.

2. В процедуре вывода символов в некоторых столбцах знакоместо было шире чем нужно на 1 пиксел.

3. Использование 16ричных чисел со знаком "&" без обрамляющих скобок было очень ограничено и возможно только в двух случаях: или в конце строки или перед запятой.
Теперь шестнадцатиричные числа можно использовать без скобок наравне с десятичными за исключением номеров строк.
Парсинг 16ричных чисел с двумя и более цифрами выполняется быстрее, чем 10чных, поэтому использование целых чисел в 16ричном виде позволяет ускорить выполнение программы.

4. Оператор CLOAD, который позволяет загружать программы на бейсике без имени (программы с именем он тоже загружает, если начать загрузку после того как пройдет имя, что легко определить на слух) теперь сразу после старта бейсика готов к работе с магнитофоном и не требует предварительных команд CLOAD"" или BLOAD""

2.56:
5. Исправлена ошибка парсера аргумента, возникавшая при подстановке в качестве аргумента токена оператора. Спасибо Игорю Титарю за багрепорт. Эта ошибка была во всех клонах BASIC 2.5 кроме BASIC-M (автор Фролов В.).

2.57:
6. Исправлена ошибочная работа оператора INPUT при вводе значений символьных переменных - теперь токенизация не выполняется.

2.58:
7. Теперь при печати текста в режиме LINE BS не происходит "лишнего" скролла.
8. Исправлен RENUM (эта ошибка еще из оригинального бейсика-микрон).

2.59
8.1. RENUM окончательно доисправлен.
8.2. Теперь RENUM не добавляет пробел между оператором и номером строки.
9. В два раза уменьшена задержка междру автоповтором символов.

2.60
10. Исправлена ошибка быстрого ввода при нажатии АР2 и после этого УС+СС+буква. Спасибо Игорю Титарю за багрепорт.
11. Ускорены базовые арифметические операции (умножение, деление, сложение и вычитание). Т.к. более сложные математические функции используют базовые, то они тоже ускорятся.

2.61
12. В GET убрана проверка на сохранение картинки в области переменных.
13. Убраны лишние проверки. Лишними они стали после исправления п.5.
14. В функцию & наряду с поддержкой шестнадцатеричных чисел добавлена поддержка восьмеричных чисел - &Oвосьмеричное_число. Диапазон как и у шестнадцатеричного варианта - два байта, т.е. от &O0 до &O177777

2.62
15. Процедуры обмена с магнитофоном вернулись на "классические" адреса, что дает совместимость при перехвате магнитофонных операций с бейсиком 2.5 (не требуется адаптация эмуляторов для данной версии бейсика).
16. Ускорен скроллинг при выводе текста.
17. Более эффективный упаковщик ZX0 вместо MegaLZ.

2.63
18. Толерантность к внедрению в обработчик прерывания.

2.70
19. Оптимизированы: поиск строки; поиск переменной; рисование и стирание точек (сказывается не только на графических операторах, но и на выводе символов); изменение цвета; определение цвета точки; PUT; некоторые другие мелочи.

2.71
20. Оптимизированы POKE,SCREEN0,SCREEN3 (для случаев когда изменяется более чем одно значение); рисование линий; PAINT; CIRLCE (особенно эллипсы); умножение; много мелких оптимизаций.

2.72
21. В PAINT частично реализована более быстрая пиксельно-байтовая заливка; ускорено определение цвета точки (быстрее работают GET, PAINT, POINT); чуть сократил CIRCLE.

2.80
22. Убран быстрый набор по УС+СС+буква. В связи с этим заметно сократился размер бейсика в упакованном виде.
23. Таблица синусов для дуг в CIRCLE переведена в компактный вид (48 байт вместо 256) при полном сохранении исходной точности. CIRCLE медленнее чем в 2.72 на 0.2-0.5%
24. Резко ускорен PAINT (почти в 6.5 раза быстрее basic 2.5). Исправлена ошибка PAINT (2.72), которая могла проявляться в некоторых условиях при заполнении экрана с заворотом.

2.81
25. Ускорено умножение и некоторые служебные математические процедуры.
26. Немного ускорены FOR..NEXT и RETURN.

2.82
27. Заметно ускорены рисование эллипсов и LINE BF/BS.
28. Немного ускорены paint, рисование дуг и кругов, вывод символов и деление.
29. Микрооптимизации вызова процедуры проверки типов (в разборе арифметических выражений, AND/OR, FOR), процедуры сравнения, процедуры проверки знака.
30. PAUSE теперь дает почти одинаковую задержку на всех типах процессоров (8080/580ВМ1, 8085, z80).
31. Процедура обмена слов при рисовании дуг от большего угла к меньшему теперь не использует стек и не запрещает прерывания.

2.83
32. Исправлена (незначительная) ошибка в SCREEN4 (задание скорости обмена с магнитофоном).
33. Исправлено рисование эллипсов при очень маленьких значениях отношения осей (ошибка появилась в 2.82). Скорость рисования эллипсов немного увеличилась.
34. Новая более быстрая процедура деления для плавающей точки.
35. Сильно сокращена и ускорена процедура целочисленного деления использующаяся при рисовании сжатых по вертикали эллипсов и в SCREEN4.
36. Вернул быстрый набор по УС+СС+буква.
37. Убрал поддержку восьмеричных чисел (была в 2.61-2.82).

2.84
38. Вернул восьмеричные числа (подробности в 2.61 п.14)
39. Доработал поддержку шестнадцатеричных и восьмеричных чисел, теперь после них может идти и оператор THEN.

2.85
40. Таблица перекодирования в QWERTY (SCREEN5,1) преобразована в компактную форму. Теперь POKE и PEEK не могут обращаться к этой таблице (диапазон 640-767).
41. Несколько мелких оптимизаций.
42. Ускорены PUT и GET.
43. Немного ускорены: проверка следующего символа, умножение, сложение/вычитание и обработчик прерываний.

2.90
44. Убраны оба варианта быстрого набора (УС+СС+буква, АР2+буква). Удален SCREEN5 (JCUKEN/QWERTY).
45. Заметно ускорены PUT и GET для ширины фрагмента >= 8 точек.

2.91
46. Исправлены ошибки GET и PUT, спасибо Евгению Вербину за багрепорт. PUT немного ускорен.

2.92
47. Заметно ускорен PUT (для ширины фрагмента >= 8 точек, особенно при четной ширине в режиме 2), немного ускорен GET (для ширины фрагмента >= 8 точек).

2.93
48. Исправлен GET для случая выхода за границу экрана (ошибка появилась в 2.92).
49. Исправлена ошибка в оцифровщике номеров строк (появилась в 2.70) - в некоторых случаях оцифровщик мог пропустить и неправильно перевести в число слишком большие номера.
50. Околоматематические микроускорения: сравнение, изменение знака, сложение, округление, оцифровка номеров строк.

2.94
51. Исправил (ошибка появилась в 2.93) и ускорил ON.
52. Добавил в инициализатор распаковщика очистку памяти программы.
53. Ускорены: сложение/вычитание, преобразование в целые (касается не только INT), помещение числа в стек.

2.95
54. Ускорены: вывод символов, LINE BF/BS.
55. Немного ускорены: сравнение чисел, оцифровка десятичных чисел, обработчик прерываний, изменение цвета рисования точки.
56. Исправлена ошибка разрешения доступа к плоскостям в PAINT при использовании значений цвета заливки и бордюра с предыдущего вызова PAINT.

2.96
57. Заметно ускорена оцифровка десятичных чисел.

2.97
58. Оцифровщик номеров строк переведен обратно на "стандарт Microsoft" 0-65529 и ускорен.
59. Вернул "старый" (новый был с 2.57) вариант обработки токенов при вводе символьных переменных в INPUT. Исправлено сообщение об ошибке при вводе неправильной строки в INPUT.
60. Исправил (ошибка была в 2.95-2.96) и ускорил сравнение чисел.
61. Очень много оптимизаций: переходы, разбор имени и поиск переменных, математика, оцифровка чисел, массивы, обработка строк и некоторые другие вещи.

2.97fix
62. Исправлена (крайне редкая) ошибка поиска номера строки (появилась в 2.97).

2.98
63. Исправлен ("С-") и доработан PLAY.
64. Доработана проверка на переполнение в делении.
65. BEEP теперь звучит практически одинаково на различных процессорах.
66. Исправлено ошибочное отъедание лишнего свободного места при вводе строки/EDIT.
67. POKE и PEEK теперь не могут обращаться к таблицам адресов/масок точек.
68. В делении на двоичный порядок расширен диапазон достижимых маленьких чисел.
69. Исправлен PUT с шириной >=8 точек при частичном выводе с заходом за левый край.
70. Неграфические ускорения: все арифметические операции, поиск переменных, циклы, оцифровка номеров строк, преобразование в целые, оператор PLAY, опрос клавиатуры, некоторые служебные операции.
71. Графические ускорения: резко ускорено рисование линий, немного ускорены LINE BF/BS, PUT, вывод символов, эллипсы.
72. Очистка экрана без запрета прерываний.
73. Имя загружаемой программы ограничено до 11 символов, остальные игнорируются.

2.98fix
74. Исправлена ошибка с "негашением" PLAY в режиме редактирования (появилась в 2.98, спасибо Игорю Титарю за багрепорт).

2.99
75. Исправлена ошибка GET (была с 2.90, спасибо Игорю Титарю за багрепорт).

2.99fix
76. Исправлена ошибка RENUM (была с 2.98).

2.991
77. Исправлено не вполне корректное поведение функции VAL при ошибочном аргументе.
78. Убрана поддержка восьмеричных чисел (была с 2.61).

2.992
79. Исправлен/доработан CLS.
80. Исправлено/доработано определение переполнения порядка числа при его переводе из символьного предствления в двоичное.

2.993
81. Исправлена крайне редкая ошибка RETURN (была с 2.98).
82. Мелкие оптимизации.

2.994
83. Вернул рисование линии в "старом стиле" ("новый стиль" был с 2.98 по 2.993).
84. Микрозамедление умножения в некоторых случаях.

2.995
85. Теперь, как в 2.5, можно редактировать и печатать в листинге строки длиной до 127 символов.
86. Скорость умножения вернулась на уровень 2.993
87. Немного ускорил рисование линий.

2.995fix
88. Исправлена реакция на клавишу F5 (ошибка появилась в 2.995).

2.997
89. Исправлены: работа разделителей , и ; с оператором PRINT; функция POS. Печать чисел без переноса, как в оригинальном бейсике-микрон для РК86.
90. Исправлен CIRCLE (рисование дуг эллипсов при некоторых комбинациях параметров, ошибка была в 2.995). Спасибо Игорю Титарю за багрепорт.
91. Часто встречающаяся в программах комбинация IF..THEN теперь выполняется чуть быстрее, чем практически не используемый вариант IF..GOTO
92. В кодовых подпрограммах теперь можно использовать пересылки или стирание стеком (через BC) по методу Медноногова.
93. Увеличено время между командами программирования палитры для максимальной совместимости с любыми 06Ц и .02.
94. Несколько мелких оптимизаций.


Быстрый старт (вариант упакованный ZX0) без заставки.
Бейсик упакован, что ускоряет его загрузку на реал с магнитофонного входа.
В каталоге RIP вариант упакованный соответствующим упаковщиком, он распаковывается дольше (4.8 секунды вместо 1), но на 224 байта короче.
В комплекте bas2997.wav - файл для быстрой (13.8 секунд) загрузки в реал через магнитофонный вход.

Автор модификации - Иван Городецкий, Уфа 08.06.2019-09.06.2025

![Screenshot 1](basic.png)
